--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,20 @@
 doctrine:
     dbal:
+        driver: 'pdo_mysql'
+        server_version: '15'
+        charset: utf8mb4
+        default_table_options:
+            charset: utf8mb4
+            collate: utf8mb4_unicode_ci
+
+        host: '%env(DATABASE_HOST)%'
+        user: '%env(DATABASE_USER)%'
+        password: '%env(DATABASE_PWD)%'
+        dbname: '%env(DATABASE_NAME)%'
+        port: '%env(DATABASE_PORT)%'
+
         url: '%env(resolve:DATABASE_URL)%'
+       
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
